# ClimateDataAnalysis

./: .gitignore  README.md  main.py  oecd_patent_quality_country.xlsx  pyproject.toml  requirements.txt
src/: etl_stream_excel.py  features.py  io_utils.py  logger.py  q2_build_controls.py  q2_drivers.py  q2_merge_drivers.py  q3_build_emissions.py  q3_run_model.py  ranking.py  regress.py  schema.py  viz_q1.py  viz_q2_coverage.py
tests/: test_features.py  test_schema.py
