[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patent-ranking-project"
version = "0.1.0"
description = "Streaming ETL of large patent Excel, econometric model, and leadership rankings"
authors = [{name = "PatentRankingProject Maintainers"}]
requires-python = ">=3.9"
readme = "README.md"
keywords = ["patents", "econometrics", "streaming", "etl", "statsmodels"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "statsmodels>=0.14",
  "matplotlib>=3.7",
  "openpyxl>=3.1",     # for EDGAR .xlsx
  "pycountry>=22.3.5"  # ISO2↔ISO3 helper
]


[project.urls]
Homepage = "https://example.com"
